--- a/styles/block.css
+++ b/styles/block.css
@@ -2,4 +2,7 @@ div{
     background-color: aqua;
   display: inline-block;
   padding: 20px;
+  margin-bottom: 30px;
+  border: 10px;
+  border-radius: 20px;
 }
